--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.tgz filter=lfs diff=lfs merge=lfs -text
+XRDev-UofT/Packages/com.ptc.vuforia.engine-10.3.2.tgz filter=lfs diff=lfs merge=lfs -text
